--- a/sass_bem_wireframe_practice/scss/style.scss
+++ b/sass_bem_wireframe_practice/scss/style.scss
@@ -2,18 +2,20 @@
 @import "base/reset";
 
 // helpers styles
-@import "helpers/mixins";
 @import "helpers/variables";
+@import "helpers/mixins";
 
 // base styles
 @import "base/typography";
 
 // components styles
+@import "components/logo";
 @import "components/navigation";
 @import "components/items";
 @import "components/buttons";
 
 // layout styles
+@import "layout/wrapper";
 @import "layout/header";
 @import "layout/hero";
 @import "layout/subhero";
@@ -22,35 +24,10 @@
 @import "layout/signup";
 @import "layout/footer";
 
-// fonts
-@import url("https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat:wght@400;500;700&display=swap");
-$fontComfortaa: "Comfortaa", cursive;
-$fontMontserrat: "Montserrat", sans-serif;
-
-// ----------------------------------------------------------
-// general page
-// general styles
-.wrapper {
-  display: flex;
-  flex-direction: column;
-
-  width: 100%;
-
-  font-family: $fontMontserrat;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.667;
-  letter-spacing: -0.015em;
-
-  color: $textCol;
-  background-color: $firstPageBg;
-}
-
 // ----------------------------------------------------------
 // header
 .header {
-  padding: 0 (80 / 1680 * 100%);
+  padding: 0 calc(80 / 1680) * 100%;
 
   display: flex;
   flex-direction: row;
@@ -59,7 +36,7 @@ $fontMontserrat: "Montserrat", sans-serif;
   min-height: 60px;
 
   &__logo {
-    width: (122 + 72) / 1520 * 100%;
+    width: calc((122 + 72) / 1520) * 100%;
     height: 60px;
   }
 
@@ -69,31 +46,8 @@ $fontMontserrat: "Montserrat", sans-serif;
     align-items: center;
     justify-content: space-between;
 
-    width: (1520 - 122 - 72) / 1520 * 100%;
+    width: calc((1520 - 122 - 72) / 1520) * 100%;
     height: 60px;
-  }
-}
-
-// logo
-.logo {
-  display: flex;
-  align-items: center;
-
-  &__icon {
-    flex: 0 0 24px;
-    margin-right: 8px;
-  }
-
-  &__text {
-    font-family: $fontComfortaa;
-    font-size: 28px;
-    line-height: 32 / 28 * 1;
-    color: $titleCol;
-  }
-
-  &__text:hover,
-  &__text:focus {
-    color: $lineCol;
   }
 }
 
@@ -106,11 +60,11 @@ $fontMontserrat: "Montserrat", sans-serif;
   }
 
   .links {
-    width: 388 / 1328 * 100%;
+    width: calc(388 / 1328) * 100%;
   }
 
   .btns {
-    width: 272 / 1328 * 100%;
+    width: calc(272 / 1328) * 100%;
   }
 
   &__item {
@@ -122,100 +76,31 @@ $fontMontserrat: "Montserrat", sans-serif;
 
 // nac links
 .link-header {
-  color: $headerLinkCol;
+  color: $headerLink;
 }
 
 .link-header:hover,
 .link-header:focus {
-  color: $textCol;
-}
-
-// nav btns
-.btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  color: $btnTextCol;
-
-  background-color: $btnBg;
-
-  border: 1px solid $btnBgHoverFocus;
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  -ms-border-radius: 6px;
-  -o-border-radius: 6px;
-  border-radius: 6px;
+  color: $headerLinkActive;
 }
 
 .btn-header {
   height: 40px;
 }
 
-.btn:hover,
-.btn:focus {
-  color: $btnTextHoverFocusCol;
-  background-color: $btnBgHoverFocus;
-}
-
 .btns {
   & .nav__item {
-    width: 130 / 272 * 100%;
+    width: calc(130 / 272) * 100%;
   }
 }
 
 // nac links, btns, logo active
-.link,
-.btn,
-.logo__text {
+.link {
   -webkit-transition: all 0.1s ease-in;
   -moz-transition: all 0.1s ease-in;
   -ms-transition: all 0.1s ease-in;
   -o-transition: all 0.1s ease-in;
   transition: all 0.1s ease-in;
-}
-
-// ----------------------------------------------------------
-// main content
-.content {
-  flex: 1 1 auto;
-
-  &__hero {
-    width: 100%;
-    height: 930px;
-  }
-
-  &__body {
-  }
-}
-
-// ----------------------------------------------------------
-// hero
-.hero {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-
-  background-image: url("../image/hero/hero-img.svg");
-  background-position: center;
-  background-size: cover;
-
-  &__title {
-    margin-bottom: 40px;
-
-    font-size: 56px;
-    line-height: 80 / 56 * 1;
-    text-align: center;
-    color: $titleCol;
-  }
-
-  &__btn {
-    margin-bottom: 128px;
-
-    width: 192px;
-    height: 52px;
-  }
 }
 
 // ----------------------------------------------------------
@@ -268,9 +153,6 @@ $fontMontserrat: "Montserrat", sans-serif;
 .item__wrap {
 }
 
-.content__sub-page {
-}
-
 .sub-page {
 }
 
@@ -278,9 +160,6 @@ $fontMontserrat: "Montserrat", sans-serif;
 }
 
 .sub-page__img {
-}
-
-.content__testimonials {
 }
 
 .testimonials {
@@ -296,9 +175,6 @@ $fontMontserrat: "Montserrat", sans-serif;
 }
 
 .testimonials__item {
-}
-
-.content__signup {
 }
 
 .signup {
