--- a/sass_bem_wireframe_practice/scss/layout/_wrapper.scss
+++ b/sass_bem_wireframe_practice/scss/layout/_wrapper.scss
@@ -19,13 +19,9 @@
   &__body {
   }
 
-  .content__sub-page {
-}
+  &__testimonials {
+  }
 
-.content__testimonials {
-}
-
-.content__signup {
-}
-
+  &__signup {
+  }
 }
