--- a/sass_bem_wireframe_practice/scss/layout/_footer.scss
+++ b/sass_bem_wireframe_practice/scss/layout/_footer.scss
@@ -1,17 +1,16 @@
 // footer
 .footer {
-}
+  &__nav {
+  }
 
-.footer__nav {
+  &__logo {
+  }
 }
 
 .nav__other {
 }
 
 .link__footer {
-}
-
-.footer__logo {
 }
 
 .nav__social {
