--- a/sass_bem_wireframe_practice/css/style.css
+++ b/sass_bem_wireframe_practice/css/style.css
@@ -124,7 +124,7 @@ table {
   color: rgba(0, 0, 0, 0.8);
 }
 
-.body__header, .hero__title, .item__title {
+.testimonials__title, .body__header, .hero__title, .item__title {
   font-size: 48px;
   line-height: 1.5;
   color: #000000;
@@ -194,11 +194,6 @@ table {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-.item__img {
-  width: 50%;
-  height: auto;
-}
-
 .btn {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -352,6 +347,10 @@ table {
 .body .item__title {
   margin-bottom: 24px;
 }
+.body .item__img {
+  width: 50%;
+  height: auto;
+}
 
 .top__items {
   display: -webkit-box;
@@ -410,4 +409,84 @@ table {
 .bot__item:nth-child(even) .item__wrap {
   margin-left: 0;
   margin-right: 5.3191489362%;
+}
+
+.testimonials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 7.1428571429% 4.7619047619%;
+  text-align: center;
+}
+.testimonials__title, .testimonials__text {
+  margin-bottom: 2.1052631579%;
+  max-width: 1400px;
+}
+.testimonials__text {
+  font-size: 36px;
+}
+.testimonials__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding: 0 5.0847457627%;
+  max-width: 1180px;
+}
+.testimonials__item {
+  margin: 40px;
+}
+
+.signup {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 7.1428571429% 4.7619047619%;
+  background-color: #f5f5f5;
+}
+.signup__title {
+  width: 62.1052631579%;
+  font-size: 36px;
+}
+.signup__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  width: 37.8947368421%;
+}
+.signup__item {
+  width: 33.3333333333%;
+}
+.signup .btn {
+  width: 100%;
+  min-width: 120px;
+  height: 52px;
 }
