--- a/sass_bem_wireframe_practice/scss/style.scss
+++ b/sass_bem_wireframe_practice/scss/style.scss
@@ -11,6 +11,7 @@
 // components styles
 @import "components/logo";
 @import "components/navigation";
+@import "components/links";
 @import "components/items";
 @import "components/buttons";
 
