--- a/sass_bem_wireframe_practice/scss/layout/_testimonials.scss
+++ b/sass_bem_wireframe_practice/scss/layout/_testimonials.scss
@@ -26,7 +26,7 @@
     flex-wrap: wrap;
     justify-content: space-around;
 
-    padding: 0 calc(60 / 1180) * 100%;
+    padding: 0 60px;
 
     max-width: 1180px;
   }
