--- a/sass_bem_wireframe_practice/css/style.css
+++ b/sass_bem_wireframe_practice/css/style.css
@@ -249,6 +249,11 @@ html {
           flex: 1 1 auto;
 }
 
+.air {
+  width: 100%;
+  height: 60px;
+}
+
 .header {
   margin: 0 4.7619047619%;
   display: -webkit-box;
@@ -299,6 +304,21 @@ html {
 .header .link:hover,
 .header .link:focus {
   color: rgba(0, 0, 0, 0.8);
+}
+
+.header.first .nav__items {
+  margin: 0 auto;
+}
+.header.first .nav__items:nth-last-child(1) {
+  margin: 0;
+  width: 9.7891566265%;
+  min-width: 80px;
+}
+.header.first .nav__items:nth-last-child(1) .nav__item {
+  width: 100%;
+}
+.header.first .nav__items:nth-last-child(1) .nav__item:nth-last-child(2) {
+  display: none;
 }
 
 .hero {
