--- a/sass_bem_wireframe_practice/css/style.css
+++ b/sass_bem_wireframe_practice/css/style.css
@@ -375,6 +375,33 @@ html {
   font-size: 18px;
 }
 
+.hero1 {
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+.hero1 .hero1__box,
+.hero1 .hero1__bg {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+}
+.hero1 .hero1__bg {
+  background-image: url("/image/hero/hero-half-vertical.svg");
+  background-position: center;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.hero1 .hero__title,
+.hero1 .hero__btn {
+  margin: 0;
+}
+
 .body {
   margin-top: 7.8571428571%;
   display: -webkit-box;
